--- a/static/src/pages/error/notFound/notFound.css
+++ b/static/src/pages/error/notFound/notFound.css
@@ -1,7 +1,7 @@
 .not-found-error-page{
   background-color: #E5E5E5;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
