--- a/static/src/pages/profile/profile.css
+++ b/static/src/pages/profile/profile.css
@@ -114,9 +114,18 @@
   text-align: left;
 }
 
+.profile__navigation-buttom_hidden {
+  display: none;
+}
+
+.profile__navigation-buttom_type_alert {
+  color: #FF0000;
+}
+
 .profile__save-buttom {
   width: 70%;
   margin: auto;
+  margin-top: 40px;
   padding: 12px 0;
   border-radius: 8px;
   background-color: #3369F3;
@@ -129,7 +138,7 @@
   text-align: center;
   outline: 0;
   border: 0;
-  display: none;
+  display: block;
   cursor: pointer;
 }
 
