--- a/static/src/components/inputCredentials/inputCredentials.css
+++ b/static/src/components/inputCredentials/inputCredentials.css
@@ -20,9 +20,29 @@
   border: 0;
   border-bottom: 1px solid #3369F3;
   margin: 0;
-  padding: 0 0 2px 0;
+  padding: 2px 0 2px 5px;
   width: 100%;
   outline: 0;
+}
+
+.form-group__input_type_credentials:focus {
+  border: 2px solid #3369F3;
+  border-radius: 5px;
+}
+.form-group__input_invalid {
+  border-bottom: 1px solid #ec3b27;
+}
+
+.form-group__input_invalid:focus {
+  border: 2px solid #ec3b27;
+}
+
+.form-group__input_valid {
+  border-bottom: 1px solid #318526;
+}
+
+.form-group__input_valid:focus {
+  border: 2px solid #318526;
 }
 
 .form-group__error_type_credentials {
