--- a/src/pages/chat/components/buttons/RemoveMessageButton/RemoveMessageButton.css
+++ b/src/pages/chat/components/buttons/RemoveMessageButton/RemoveMessageButton.css
@@ -1,9 +1,9 @@
-.chat__attach-button {
+.chat__menu-message-button {
   width: 28px;
   height: 28px;
   border: 0;
   border-radius: 50%;
-  background-image: url(../../../../../../static/icons/paperclip.svg);
+  background-image: url(../../../../../../static/icons/cross.svg);
   transform: rotate(180);
   background-repeat: no-repeat;
   background-position: center;
