--- a/src/pages/chat/components/message/message.css
+++ b/src/pages/chat/components/message/message.css
@@ -5,6 +5,11 @@
   justify-content: flex-start;
   align-items: flex-start;
   padding: 10px 0;
+  cursor: pointer;
+}
+
+.message_active {
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .message__window {
@@ -16,6 +21,9 @@
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
+  position: relative;
+  top: 0;
+  left: 0;
 }
 
 .message__window_right {
@@ -49,8 +57,4 @@
 .message__date_checked::before {
  content: '\f00c';
  font-family: FontAwesome;
-}
-
-.message__menu-container {
-  
 }
