--- a/src/pages/chat/components/submit/submit.css
+++ b/src/pages/chat/components/submit/submit.css
@@ -4,11 +4,11 @@
   font-weight: 500;
   font-size: 13px;
   line-height: 13px;
-  color: #FFF;
+  color: #fff;
   padding: 12px 0;
-  margin: 20px 0 0 0;
+  margin: 20px 0 0;
   border-radius: 8px;
-  background-color: #3369F3;
+  background-color: #3369f3;
   width: 100%;
   border: 0;
   outline: 0;
