--- a/src/pages/error/serverNotRespond/serverNotRespond.css
+++ b/src/pages/error/serverNotRespond/serverNotRespond.css
@@ -1,5 +1,5 @@
-.server-not-respod-error-page{
-  background-color: #E5E5E5;
+.server-not-respod-error-page {
+  background-color: #e5e5e5;
   width: 100vw;
   height: 100vh;
   display: flex;
