--- a/src/pages/signup/signup.css
+++ b/src/pages/signup/signup.css
@@ -3,10 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 50px 30px 30px 30px;
+  padding: 50px 30px 30px;
   margin: auto;
-  background: #FFFFFF;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+  background: #fff;
+  box-shadow: 0 0 6px rgb(0 0 0 / 14%);
   border-radius: 12px;
   width: 340px;
 }
@@ -20,7 +20,7 @@
   color: inherit;
   text-align: center;
   padding: 0;
-  margin: 0 0 40px 0;
+  margin: 0 0 40px;
 }
 
 .signup__form {
@@ -45,17 +45,16 @@
   font-weight: 500;
   font-size: 13px;
   line-height: 13px;
-  color: #FFF;
+  color: #fff;
   padding: 12px 0;
-  margin: 30% 0 0 0;
+  margin: 30% 0 0;
   border-radius: 8px;
-  background-color: #3369F3;
+  background-color: #3369f3;
   width: 100%;
   border: 0;
   outline: 0;
-  cursor: pointer; 
+  cursor: pointer;
 }
-
 
 .signup__buttom:hover {
   opacity: 0.8;
@@ -67,9 +66,9 @@
   font-weight: 500;
   font-size: 11px;
   line-height: 11px;
-  color: #3369F3;
+  color: #3369f3;
   text-decoration: none;
-  margin: 15px auto 0 auto;
+  margin: 15px auto 0;
 }
 
 .signup__link:hover {
