--- a/src/components/dropdownMenu/dropdownMenu.css
+++ b/src/components/dropdownMenu/dropdownMenu.css
@@ -3,11 +3,11 @@
   position: absolute;
   margin: 0;
   padding: 15px;
-  text-decoration: 0;    
-  background: #FFFFFF;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+  text-decoration: 0;
+  background: #fff;
+  box-shadow: 0 0 6px rgb(0 0 0 / 14%);
   border-radius: 12px;
-  list-style-type: none;  
+  list-style-type: none;
 }
 
 .dropdown-menu_show {
@@ -31,7 +31,7 @@
 }
 
 .dropdown-menu__item {
-  padding: 0 0 16px 0;
+  padding: 0 0 16px;
   margin: 0;
 }
 
@@ -68,7 +68,7 @@
   margin: 0;
   padding: 0;
   font-family: inherit;
-  color: #1E1E1E;
+  color: #1e1e1e;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
