--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -1,14 +1,14 @@
 .form-group {
-  display: flex;  
-  flex-wrap: nowrap;  
+  display: flex;
+  flex-wrap: nowrap;
   padding: 0;
-  margin: 0;  
+  margin: 0;
   width: 100%;
 }
 
 .form-group_column {
   flex-direction: column;
-  margin: 0 0 16px 0;  
+  margin: 0 0 16px;
   justify-content: flex-start;
   align-items: flex-start;
 }
