--- a/src/components/inputCredentials/inputCredentials.css
+++ b/src/components/inputCredentials/inputCredentials.css
@@ -4,9 +4,9 @@
   font-weight: 500;
   font-size: 9px;
   line-height: 9px;
-  color: #999999;
+  color: #999;
   padding: 0;
-  margin: 0 0 8px 0;
+  margin: 0 0 8px;
   width: 100%;
 }
 
@@ -16,9 +16,9 @@
   font-weight: 500;
   font-size: 13px;
   line-height: 13px;
-  color: #1E1E1E;
+  color: #1e1e1e;
   border: 0;
-  border-bottom: 1px solid #3369F3;
+  border-bottom: 1px solid #3369f3;
   margin: 0;
   padding: 2px 0 2px 5px;
   width: 100%;
@@ -26,9 +26,10 @@
 }
 
 .form-group__input_type_credentials:focus {
-  border: 2px solid #3369F3;
+  border: 2px solid #3369f3;
   border-radius: 5px;
 }
+
 .form-group__input_invalid {
   border-bottom: 1px solid #ec3b27;
 }
@@ -52,7 +53,7 @@
   font-size: 8px;
   line-height: 8px;
   padding: 0;
-  margin: 8px 0 0 0;
-  color: #FF2F2F;
+  margin: 8px 0 0;
+  color: #ff2f2f;
   width: 100%;
 }
