--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   z-index: 10;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgb(0 0 0 / 40%);
 }
 
 .modal_show {
@@ -21,8 +21,8 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-color: #FFFFFF;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+  background-color: #fff;
+  box-shadow: 0 0 6px rgb(0 0 0 / 14%);
   border-radius: 12px;
   padding: 40px 30px;
   opacity: 1;
