--- a/src/pages/chat/components/CreateChatModal/CreateChatModal.css
+++ b/src/pages/chat/components/CreateChatModal/CreateChatModal.css
@@ -5,7 +5,7 @@
   font-size: 15px;
   line-height: 20px;
   text-align: center;
-  color: #1E1E1E;
+  color: #1e1e1e;
   padding: 0;
   margin: 0;
 }
