--- a/src/pages/chat/components/buttons/userMenuButton/userMenuButton.css
+++ b/src/pages/chat/components/buttons/userMenuButton/userMenuButton.css
@@ -1,4 +1,3 @@
-
 .chat__current-user-menu {
   width: 25px;
   height: 25px;
@@ -14,13 +13,13 @@
 
 .chat__current-user-menu:hover {
   opacity: 0.8;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .chat__current-user-menu:active {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .chat__current-user-menu_active {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
