--- a/src/pages/chat/components/messageForm/messageForm.css
+++ b/src/pages/chat/components/messageForm/messageForm.css
@@ -7,7 +7,7 @@
 .chat__input-message {
   width: 100%;
   border: 0;
-  background-color: #EFEFEF;
+  background-color: #efefef;
   border-radius: 30px;
   box-sizing: border-box;
   padding: 10px 20px;
