--- a/src/pages/chat/components/messageInput/messageInput.css
+++ b/src/pages/chat/components/messageInput/messageInput.css
@@ -5,7 +5,7 @@
 .message-input {
   width: 100%;
   border: 0;
-  background-color: #EFEFEF;
+  background-color: #efefef;
   border-radius: 30px;
   box-sizing: border-box;
   padding: 10px 20px;
