--- a/src/pages/error/components/window/window.css
+++ b/src/pages/error/components/window/window.css
@@ -13,7 +13,7 @@
   font-style: normal;
   font-size: 3rem;
   padding: 0;
-  margin: 0 0 25px 0;
+  margin: 0 0 25px;
   text-align: center;
 }
 
@@ -24,13 +24,13 @@
   font-style: normal;
   font-size: 1rem;
   padding: 0;
-  margin: 0 0 70px 0;
-  text-align: center; 
+  margin: 0 0 70px;
+  text-align: center;
 }
 
 .error-window__link {
   font-family: inherit;
-  color: #3369F3;
+  color: #3369f3;
   font-weight: normal;
   font-style: normal;
   font-size: 1rem;
