--- a/src/pages/error/notFound/notFound.css
+++ b/src/pages/error/notFound/notFound.css
@@ -1,5 +1,5 @@
-.not-found-error-page{
-  background-color: #E5E5E5;
+.not-found-error-page {
+  background-color: #e5e5e5;
   width: 100vw;
   height: 100vh;
   display: flex;
