--- a/src/pages/profile/components/inputProfile/inputProfile.css
+++ b/src/pages/profile/components/inputProfile/inputProfile.css
@@ -1,5 +1,5 @@
 .form-group_type_profile {
-  border-bottom: 1px solid #EAEAEA;
+  border-bottom: 1px solid #eaeaea;
   padding: 7px 0;
 }
 
@@ -17,7 +17,7 @@
 
 .form-group__input_type_profile {
   font-family: inherit;
-  color: #999999;
+  color: #999;
   font-style: normal;
   font-weight: 500;
   font-size: 13px;
@@ -25,7 +25,7 @@
   text-align: right;
   border: 0;
   margin: 0;
-  padding: 3px 5px 3px;
+  padding: 3px 5px;
   outline: 0;
   width: 100%;
   border-radius: 10px;
